--- a/1.API/appsettings.json
+++ b/1.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "AutomovileUnitDB": "Server=127.0.0.1,3306;Uid=root;Pwd=root;Database=AutomovileUnit;"
+  },
   "AllowedHosts": "*"
 }
