--- a/2.Domain/2.Domain.csproj
+++ b/2.Domain/2.Domain.csproj
@@ -9,6 +9,16 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.12" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.12">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\3.Data\3.Data.csproj" />
     </ItemGroup>
 
 </Project>
