build, agregar login y register

--- a/1.API/appsettings.json
+++ b/1.API/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "AutomovileUnitDB": "Server=127.0.0.1,3306;Uid=root;Pwd=root;Database=AutomovileUnit;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "softwareerickruiz13",
+    "Issuer": "http://localhost:5190",
+    "Audience": "http://localhost:5190",
+    "DurationInMinutes": 60
+  }
 }
