--- a/1.API/1.API.csproj
+++ b/1.API/1.API.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
         <PackageReference Include="System.Security.Claims" Version="4.3.0" />
     </ItemGroup>
 
