update and complete documentationn

--- a/1.API/appsettings.json
+++ b/1.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AutomovileUnitDB": "Server=127.0.0.1,3306;Uid=root;Pwd=root;Database=AutomovileUnit;"
+    "AutomovileUnitDB": "Server=127.0.0.1,3306;Uid=root;Pwd=@Botanico7;Database=AutomovileUnit;"
   },
   "AllowedHosts": "*",
   "Jwt": {
