--- a/1.API/1.API.csproj
+++ b/1.API/1.API.csproj
@@ -5,6 +5,8 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>_1.API</RootNamespace>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        
     </PropertyGroup>
 
     <ItemGroup>
