cambio de databases

--- a/1.API/appsettings.json
+++ b/1.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AutomovileUnitDB": "Server=127.0.0.1,3306;Uid=root;Pwd=root;Database=AutomovileUnit;"
+    "AutomovileUnitDB": "Server= sql10.freemysqlhosting.net,3306;Uid=sql10658651;Pwd=KDq4fMhYws;Database=sql10658651;"
   },
   "AllowedHosts": "*",
   "Jwt": {
