--- a/1.API/appsettings.json
+++ b/1.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AutomovileUnitDB": "Server= sql10.freemysqlhosting.net,3306;Uid=sql10658651;Pwd=KDq4fMhYws;Database=sql10658651;"
+    "AutomovileUnitDB":"Server=sql3.freemysqlhosting.net,3306;Uid=sql3658786;Pwd=nFNgSaFgGj;Database=sql3658786;"
   },
   "AllowedHosts": "*",
   "Jwt": {
