--- a/1.API/appsettings.json
+++ b/1.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AutomovileUnitDB":"Server=sql3.freemysqlhosting.net,3306;Uid=sql3658786;Pwd=nFNgSaFgGj;Database=sql3658786;"
+    "AutomovileUnitDB":"Server=127.0.0.1,3306;Uid=root;Pwd=root;Database=AutomovileUnit;"
   },
   "AllowedHosts": "*",
   "Jwt": {
