update connection string mysql

--- a/1.API/appsettings.json
+++ b/1.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "AutomovileUnitDB":"Server=127.0.0.1,3306;Uid=root;Pwd=B@ldeon18;Database=AutomovileUnit;"
+    "AutomovileUnitDB":"Server=sql10.freemysqlhosting.net,3306;Uid=sql10663655;Pwd=RJ9M4uKMyH;Database=sql10663655;"
   },
   "AllowedHosts": "*",
   "Jwt": {
